--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ hats/
 world/
 mods/
 asm/
+FTBServer-1.7.10-1408.jar
+minecraft_server.1.7.10.jar
+eula.txt
+usercache.json
+usernamecache.json
+FTBInstall.bat
+FTBInstall.sh
