Add configs and mods based on modlist.txt

--- a/config/NEI/client.cfg
+++ b/config/NEI/client.cfg
@@ -16,8 +16,8 @@ command
 
 inventory
 {
-	cheatmode=2
-	gamemodes=creative, creative+, adventure
+	cheatmode=1
+	gamemodes=creative
 	hidden=false
 	itemIDs=1
 	itemsort=nei.itemsort.minecraft,nei.itemsort.mod,nei.itemsort.id,nei.itemsort.default,nei.itemsort.damage,nei.itemsort.name
@@ -25,9 +25,10 @@ inventory
 	#For those who can't help themselves.
 	#Set this to a mode and you will be unable to change it ingame
 	lockmode=-1
+	oredict=false
 	profileRecipes=false
 	searchmode=1
-	utilities=delete, magnet, time, rain, heal, creative, creative+, adventure, enchant, potion
+	utilities=delete, magnet, time, rain, heal, creative, creative+, adventure
 	widgetsenabled=true
 }
 
