--- a/config/NotEnoughKeys.cfg
+++ b/config/NotEnoughKeys.cfg
@@ -370,6 +370,16 @@ key {
         false
         false
      >
+    B:key.clipboardPaste <
+        false
+        false
+        false
+     >
+    B:key.materialCosts <
+        false
+        false
+        false
+     >
     B:key.tarmor <
         false
         false
