--- a/config/forestry/common.conf
+++ b/config/forestry/common.conf
@@ -41,7 +41,7 @@ genetics.clear.invalid.chromosomes=false
 #####################
 # HARVESTERS
 #####################
-# set to false if harvesters should output all harvested products regardless of sid
+# set to false if harvesters should output all harvested products 
 harvesters.sidesensitive=true
 
 
@@ -57,16 +57,15 @@ performance.backpacks.resupply=true
 #####################
 # PERMISSIONS
 #####################
-# ########
+# #########
 permissions.login=[Forestry]
-# set to
 permissions.autoop=true
 
 
 #####################
 # PLANTERS
 #####################
-# set to false if farms should output all harvested products regardless of sid
+# set to false if farms should output all harvested products 
 planters.sidesensitive=true
 
 
@@ -82,7 +81,7 @@ structures.schemata.disabled=
 #####################
 # set to false to disable the mail alert box
 tweaks.mailalert.enabled=true
-# set to false to disable apple pickup by
+# set to false to disabl
 tweaks.apple.pickup.enabled=true
 # set to true to disable hints on machine and engine guis.
 tweaks.hints.disabled=false
@@ -92,7 +91,7 @@ tweaks.energystat.disabled=true
 tweaks.tooltip.liquidamount.disabled=false
 # set to true to disable access restrictions on forestry machines.
 tweaks.permissions.disabled=false
-# set to true to disable some nagging and wa
+# set to true to disable so
 tweaks.nags.disabled=false
 # set to true to disable update and version check notice.
 tweaks.upgradenotice.disabled=false
