--- a/config/iChunUtil_Stats.cfg
+++ b/config/iChunUtil_Stats.cfg
@@ -11,7 +11,7 @@ stats {
     S:statsData=
 
     # Don't change this.
-    S:statsIdentifier=kPR20*0>qyPhan#M1} M
+    S:statsIdentifier=T\l!q1mxG {SA[ys7Ff9
 
     # Opt out of iChunUtil's stat collection
     # No personal info is taken from you.
