--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -156,9 +156,30 @@ symbol {
     B:biome64.enabled=true
     B:biome65.enabled=true
     B:biome66.enabled=true
+    B:biome69.enabled=true
     B:biome7.enabled=true
+    B:biome74.enabled=true
+    B:biome75.enabled=true
+    B:biome76.enabled=true
+    B:biome77.enabled=true
+    B:biome78.enabled=true
+    B:biome79.enabled=true
     B:biome8.enabled=true
+    B:biome80.enabled=true
+    B:biome81.enabled=true
+    B:biome82.enabled=true
+    B:biome83.enabled=true
+    B:biome84.enabled=true
+    B:biome85.enabled=true
+    B:biome86.enabled=true
+    B:biome87.enabled=true
+    B:biome88.enabled=true
+    B:biome89.enabled=true
     B:biome9.enabled=true
+    B:biome90.enabled=true
+    B:biome91.enabled=true
+    B:biome92.enabled=true
+    B:biome93.enabled=true
     B:caves.enabled=true
     B:colorcloud.enabled=true
     B:colorcloudnat.enabled=true
