--- a/config/AWWayofTime.cfg
+++ b/config/AWWayofTime.cfg
@@ -218,6 +218,7 @@ wellofsufferingblacklist {
     B:Chicken=false
     B:Cow=false
     B:Creeper=false
+    B:CustomNpc=false
     B:EnderDragon=false
     B:EnderIO.EnderCreeper=false
     B:EnderIO.Enderminy=false
@@ -234,6 +235,8 @@ wellofsufferingblacklist {
     B:Natura.FlameSpiderBaby=false
     B:Natura.Imp=false
     B:Natura.NitroCreeper=false
+    B:NpcDragon=false
+    B:NpcSlime=false
     B:OpenBlocks.Luggage=false
     B:OpenBlocks.MiniMe=false
     B:Ozelot=false
@@ -283,6 +286,26 @@ wellofsufferingblacklist {
     B:Thaumcraft.TravelingTrunk=false
     B:Thaumcraft.Wisp=false
     B:ThaumicExploration.TaintacleMinion=false
+    B:ThaumicHorizons.ChocolateCow=false
+    B:ThaumicHorizons.ChromaticSheep=false
+    B:ThaumicHorizons.Endersteed=false
+    B:ThaumicHorizons.Familiar=false
+    B:ThaumicHorizons.GoldChicken=false
+    B:ThaumicHorizons.GolemTH=false
+    B:ThaumicHorizons.Gravekeeper=false
+    B:ThaumicHorizons.GuardianPanther=false
+    B:ThaumicHorizons.HorseSkeleton=false
+    B:ThaumicHorizons.HorseZombie=false
+    B:ThaumicHorizons.LunarWolf=false
+    B:ThaumicHorizons.MeatSlime=false
+    B:ThaumicHorizons.MercurialSlime=false
+    B:ThaumicHorizons.NetherHound=false
+    B:ThaumicHorizons.NightmareTH=false
+    B:ThaumicHorizons.OrePig=false
+    B:ThaumicHorizons.ScholarChicken=false
+    B:ThaumicHorizons.Seawolf=false
+    B:ThaumicHorizons.SelfShearingSheep=false
+    B:ThaumicHorizons.TaintEaterPig=false
     B:TwilightForest.Adherent=false
     B:"TwilightForest.Apocalypse Cube"=false
     B:"TwilightForest.Armored Giant"=false
@@ -350,6 +373,30 @@ wellofsufferingblacklist {
     B:Wolf=false
     B:Zombie=false
     B:chisel.snowman=false
+    B:customnpcs.CustomNpc=false
+    B:customnpcs.NpcDragon=false
+    B:customnpcs.NpcSlime=false
+    B:customnpcs.npcEnderman=false
+    B:customnpcs.npcGolem=false
+    B:customnpcs.npccrystal=false
+    B:customnpcs.npcdwarffemale=false
+    B:customnpcs.npcdwarfmale=false
+    B:customnpcs.npcelffemale=false
+    B:customnpcs.npcelfmale=false
+    B:customnpcs.npcenderchibi=false
+    B:customnpcs.npcfurryfemale=false
+    B:customnpcs.npcfurrymale=false
+    B:customnpcs.npchumanfemale=false
+    B:customnpcs.npchumanmale=false
+    B:customnpcs.npcnagafemale=false
+    B:customnpcs.npcnagamale=false
+    B:customnpcs.npcorcfemale=false
+    B:customnpcs.npcorcfmale=false
+    B:customnpcs.npcpony=false
+    B:customnpcs.npcskeleton=false
+    B:customnpcs.npcvillager=false
+    B:customnpcs.npczombiefemale=false
+    B:customnpcs.npczombiemale=false
     B:enderzoo.ConcussionCreeper=false
     B:enderzoo.DireWolf=false
     B:enderzoo.Enderminy=false
@@ -357,6 +404,485 @@ wellofsufferingblacklist {
     B:enderzoo.FallenMount=false
     B:enderzoo.WitherCat=false
     B:enderzoo.WitherWitch=false
+    B:nevermine.Airhead=false
+    B:nevermine.Alarmo=false
+    B:nevermine.Alluricorn=false
+    B:nevermine.Amphibior=false
+    B:nevermine.Amphibiyte=false
+    B:nevermine.AncientGolem=false
+    B:nevermine.Anemia=false
+    B:nevermine.Angelica=false
+    B:nevermine.Angler=false
+    B:nevermine.AnimaMaster=false
+    B:nevermine.Apparition=false
+    B:nevermine.Archvine=false
+    B:nevermine.Ariel=false
+    B:nevermine.Arkback=false
+    B:nevermine.Arocknid=false
+    B:nevermine.Assassin=false
+    B:nevermine.AuguryMaster=false
+    B:nevermine.Automaton=false
+    B:nevermine.Bane=false
+    B:nevermine.BaneBig=false
+    B:nevermine.BaneClone=false
+    B:nevermine.Banshee=false
+    B:nevermine.Basilisk=false
+    B:nevermine.Blissard=false
+    B:nevermine.Bloodmist=false
+    B:nevermine.Bloodsucker=false
+    B:nevermine.Bobo=false
+    B:nevermine.BombCarrier=false
+    B:nevermine.BoneCreature=false
+    B:nevermine.Boneback=false
+    B:nevermine.Bouncer=false
+    B:nevermine.Broccohead=false
+    B:nevermine.Brute=false
+    B:nevermine.Bugeye=false
+    B:nevermine.BushBaby=false
+    B:nevermine.CandyCorny=false
+    B:nevermine.CaneBug=false
+    B:nevermine.Carrotop=false
+    B:nevermine.CaseConstruct=false
+    B:nevermine.CaveCreep=false
+    B:nevermine.Centinel=false
+    B:nevermine.Charger=false
+    B:nevermine.CherryBarrager=false
+    B:nevermine.CherryBlaster=false
+    B:nevermine.Chimera=false
+    B:nevermine.Chocko=false
+    B:nevermine.Chomper=false
+    B:nevermine.Clown=false
+    B:nevermine.Clunkhead=false
+    B:nevermine.Compeer=false
+    B:nevermine.Coniferon=false
+    B:nevermine.ConstructFlight=false
+    B:nevermine.ConstructMind=false
+    B:nevermine.ConstructRange=false
+    B:nevermine.ConstructResistance=false
+    B:nevermine.ConstructServility=false
+    B:nevermine.ConstructSpeed=false
+    B:nevermine.ConstructStrength=false
+    B:nevermine.ConstructTerror=false
+    B:nevermine.Corallus=false
+    B:nevermine.CorallusShot=false
+    B:nevermine.Coralon=false
+    B:nevermine.Coratee=false
+    B:nevermine.Corby=false
+    B:nevermine.Corny=false
+    B:nevermine.CottonCandor=false
+    B:nevermine.Craggy=false
+    B:nevermine.CreationMaster=false
+    B:nevermine.Cryptid=false
+    B:nevermine.CrystalTrader=false
+    B:nevermine.Crystocore=false
+    B:nevermine.Cyclops=false
+    B:nevermine.DarkBeast=false
+    B:nevermine.Dawnlight=false
+    B:nevermine.DemonReaper=false
+    B:nevermine.DesertCharger=false
+    B:nevermine.Destructor=false
+    B:nevermine.Devourer=false
+    B:nevermine.Dicer=false
+    B:nevermine.Diocus=false
+    B:nevermine.Distorter=false
+    B:nevermine.Doubler=false
+    B:nevermine.Dracyon=false
+    B:nevermine.Draggy=false
+    B:nevermine.DustStrider=false
+    B:nevermine.Dusteiva=false
+    B:nevermine.Duston=false
+    B:nevermine.Dweller=false
+    B:nevermine.DwellerClone=false
+    B:nevermine.Dyrehorn=false
+    B:nevermine.Echodar=false
+    B:nevermine.Eeo=false
+    B:nevermine.EeoRunning=false
+    B:nevermine.Eilosapien=false
+    B:nevermine.Elkanyne=false
+    B:nevermine.Elusive=false
+    B:nevermine.ElusiveClone=false
+    B:nevermine.Embrake=false
+    B:nevermine.EmperorBeast=false
+    B:nevermine.EnderCarrier=false
+    B:nevermine.Enforcer=false
+    B:nevermine.Ent=false
+    B:nevermine.Everbeast=false
+    B:nevermine.Exohead=false
+    B:nevermine.Exoid=false
+    B:nevermine.ExpeditionMaster=false
+    B:nevermine.Explodot=false
+    B:nevermine.EyeCreature=false
+    B:nevermine.FacelessFloater=false
+    B:nevermine.FacelessRunner=false
+    B:nevermine.FakePigman=false
+    B:nevermine.Fiend=false
+    B:nevermine.Fishix=false
+    B:nevermine.Flamewalker=false
+    B:nevermine.FleshEater=false
+    B:nevermine.FlowerBlue=false
+    B:nevermine.FlowerFace=false
+    B:nevermine.FlowerGreen=false
+    B:nevermine.FlowerOrange=false
+    B:nevermine.FlowerPurple=false
+    B:nevermine.FlowerYellow=false
+    B:nevermine.Flye=false
+    B:nevermine.ForagingMaster=false
+    B:nevermine.Fungat=false
+    B:nevermine.Fungback=false
+    B:nevermine.Fungik=false
+    B:nevermine.Fungock=false
+    B:nevermine.Fungung=false
+    B:nevermine.Furlion=false
+    B:nevermine.Gadgetoid=false
+    B:nevermine.Ghost=false
+    B:nevermine.GhostineAncient=false
+    B:nevermine.GhostlyBugeye=false
+    B:nevermine.GhostlyCharger=false
+    B:nevermine.GhostlyCyclops=false
+    B:nevermine.GhostlyGoblin=false
+    B:nevermine.GhostlyNightReaper=false
+    B:nevermine.GhostlySasquatch=false
+    B:nevermine.GiantSlug=false
+    B:nevermine.Gingerbird=false
+    B:nevermine.GingerbreadMan=false
+    B:nevermine.Gnawer=false
+    B:nevermine.Goalby=false
+    B:nevermine.Goblin=false
+    B:nevermine.Goldorth=false
+    B:nevermine.Goofer=false
+    B:nevermine.GorbArmsDealer=false
+    B:nevermine.GorbCitizen=false
+    B:nevermine.GorbEngineer=false
+    B:nevermine.Graw=false
+    B:nevermine.Grillface=false
+    B:nevermine.Grobbler=false
+    B:nevermine.Grocculate=false
+    B:nevermine.Grunt=false
+    B:nevermine.GuardianBlue=false
+    B:nevermine.GuardianGreen=false
+    B:nevermine.GuardianRed=false
+    B:nevermine.GuardianYellow=false
+    B:nevermine.Gyro=false
+    B:nevermine.Hag=false
+    B:nevermine.Halycon=false
+    B:nevermine.Harkos=false
+    B:nevermine.HeadlessHunter=false
+    B:nevermine.HealingGolem=false
+    B:nevermine.Hellcat=false
+    B:nevermine.Hellquin=false
+    B:nevermine.Hellspot=false
+    B:nevermine.HidingFungi=false
+    B:nevermine.HillCharger=false
+    B:nevermine.HiveKing=false
+    B:nevermine.HiveSoldier=false
+    B:nevermine.HiveWorker=false
+    B:nevermine.Holder=false
+    B:nevermine.Holder2=false
+    B:nevermine.Holder3=false
+    B:nevermine.Holder4=false
+    B:nevermine.Horndron=false
+    B:nevermine.Horntail=false
+    B:nevermine.Horon=false
+    B:nevermine.Hunch=false
+    B:nevermine.Hunter=false
+    B:nevermine.HunterMaster=false
+    B:nevermine.Hydrolisk=false
+    B:nevermine.HydroliskShielded=false
+    B:nevermine.Hydrolon=false
+    B:nevermine.IdolAbominator=false
+    B:nevermine.IdolAncientBow=false
+    B:nevermine.IdolAquaticStaff=false
+    B:nevermine.IdolBaronSSR=false
+    B:nevermine.IdolBaronStaff=false
+    B:nevermine.IdolBayonetteSR=false
+    B:nevermine.IdolBloodfury=false
+    B:nevermine.IdolCrystalMaul=false
+    B:nevermine.IdolCrystaneer=false
+    B:nevermine.IdolDaybreaker=false
+    B:nevermine.IdolExplochronSword=false
+    B:nevermine.IdolFlamingFury=false
+    B:nevermine.IdolFlowercorne=false
+    B:nevermine.IdolFormationStaff=false
+    B:nevermine.IdolFroster=false
+    B:nevermine.IdolGigaCannon=false
+    B:nevermine.IdolGoofyGreatblade=false
+    B:nevermine.IdolHauntersRifle=false
+    B:nevermine.IdolLunaBlaster=false
+    B:nevermine.IdolMechaBlaster=false
+    B:nevermine.IdolMintMagnum=false
+    B:nevermine.IdolNoxiousGreatblade=false
+    B:nevermine.IdolPenguinBlaster=false
+    B:nevermine.IdolPredatiousBow=false
+    B:nevermine.IdolPulsator=false
+    B:nevermine.IdolPurplePunisher=false
+    B:nevermine.IdolRosidianArchergun=false
+    B:nevermine.IdolRoyalGreatblade=false
+    B:nevermine.IdolSoulfireBow=false
+    B:nevermine.IdolSoundCannon=false
+    B:nevermine.IdolSwarmotron=false
+    B:nevermine.IdolTerminator=false
+    B:nevermine.IdolTidalGreatblade=false
+    B:nevermine.IdolViper1=false
+    B:nevermine.IdolViralArchergun=false
+    B:nevermine.IdolWartGun=false
+    B:nevermine.IdolWhimsyWinder=false
+    B:nevermine.IdolWizardStaff=false
+    B:nevermine.Infernal=false
+    B:nevermine.InfusionMaster=false
+    B:nevermine.InmateX=false
+    B:nevermine.InmateY=false
+    B:nevermine.InnervationMaster=false
+    B:nevermine.Iosaur=false
+    B:nevermine.Jawe=false
+    B:nevermine.Jumbo=false
+    B:nevermine.Kaiyu=false
+    B:nevermine.Kajaros=false
+    B:nevermine.Keeler=false
+    B:nevermine.KingBamBamBam=false
+    B:nevermine.KingCharger=false
+    B:nevermine.KingShroomus=false
+    B:nevermine.Koko=false
+    B:nevermine.Kranky=false
+    B:nevermine.Kror=false
+    B:nevermine.LelyetianBanker=false
+    B:nevermine.LelyetianCaster=false
+    B:nevermine.LelyetianTrader=false
+    B:nevermine.LelyetianWarrior=false
+    B:nevermine.Linger=false
+    B:nevermine.LittleBam=false
+    B:nevermine.LivingFungi=false
+    B:nevermine.Lollypopper=false
+    B:nevermine.LostSoul=false
+    B:nevermine.LottoMan=false
+    B:nevermine.LottomanAbyss=false
+    B:nevermine.LottomanBarathos=false
+    B:nevermine.LottomanCandyland=false
+    B:nevermine.LottomanCeleve=false
+    B:nevermine.LottomanCrystevia=false
+    B:nevermine.LottomanDeeplands=false
+    B:nevermine.LottomanDustopia=false
+    B:nevermine.LottomanGardencia=false
+    B:nevermine.LottomanGreckon=false
+    B:nevermine.LottomanHaven=false
+    B:nevermine.LottomanIromine=false
+    B:nevermine.LottomanLborean=false
+    B:nevermine.LottomanLelyetia=false
+    B:nevermine.LottomanLunalus=false
+    B:nevermine.LottomanMysterium=false
+    B:nevermine.LottomanNether=false
+    B:nevermine.LottomanPrecasia=false
+    B:nevermine.LottomanRunandor=false
+    B:nevermine.LottomanVoxPonds=false
+    B:nevermine.Lunarcher=false
+    B:nevermine.Lurker=false
+    B:nevermine.Magicke=false
+    B:nevermine.MechaCyclops=false
+    B:nevermine.MechaSkellox=false
+    B:nevermine.Mechachron=false
+    B:nevermine.Mechamaton=false
+    B:nevermine.Mechyon=false
+    B:nevermine.Megatherium=false
+    B:nevermine.Merkyre=false
+    B:nevermine.Mermage=false
+    B:nevermine.Metalloid=false
+    B:nevermine.Miskel=false
+    B:nevermine.MotherVoidWalker=false
+    B:nevermine.Muckopede=false
+    B:nevermine.Muncher=false
+    B:nevermine.Natura=false
+    B:nevermine.Naturalist=false
+    B:nevermine.Neptuno=false
+    B:nevermine.NethengeicBeast=false
+    B:nevermine.NethengeicWither=false
+    B:nevermine.NightReaper=false
+    B:nevermine.NightWatcher=false
+    B:nevermine.Nightfly=false
+    B:nevermine.NightmareSpider=false
+    B:nevermine.Nightwing=false
+    B:nevermine.Nipper=false
+    B:nevermine.Nospike=false
+    B:nevermine.Occulent=false
+    B:nevermine.Okazor=false
+    B:nevermine.Opteryx=false
+    B:nevermine.Orbiter=false
+    B:nevermine.Paladin=false
+    B:nevermine.Parasect=false
+    B:nevermine.Paravite=false
+    B:nevermine.Penguin=false
+    B:nevermine.Penumbra=false
+    B:nevermine.PeppermintSlug=false
+    B:nevermine.Phantom=false
+    B:nevermine.Pigotron=false
+    B:nevermine.Pincher=false
+    B:nevermine.PixonBlooming=false
+    B:nevermine.PixonGlaring=false
+    B:nevermine.PixonGleaming=false
+    B:nevermine.PixonGlistening=false
+    B:nevermine.PixonGlowing=false
+    B:nevermine.PixonRadiant=false
+    B:nevermine.PixonShining=false
+    B:nevermine.Plateosaur=false
+    B:nevermine.PodPlant=false
+    B:nevermine.PolarUrsa=false
+    B:nevermine.Polytom=false
+    B:nevermine.PortalMaster=false
+    B:nevermine.PrimordialBanker=false
+    B:nevermine.PrimordialGuide=false
+    B:nevermine.PrimordialMerchant=false
+    B:nevermine.PrimordialSpellbinder=false
+    B:nevermine.PrimordialWizard=false
+    B:nevermine.Professor=false
+    B:nevermine.Quickpocket=false
+    B:nevermine.Rainicorn=false
+    B:nevermine.Rammerhead=false
+    B:nevermine.Rammerhorn=false
+    B:nevermine.Ramradon=false
+    B:nevermine.Rawbone=false
+    B:nevermine.Raxxan=false
+    B:nevermine.RealmShifter=false
+    B:nevermine.RockBiter=false
+    B:nevermine.RockCrawler=false
+    B:nevermine.RockCritter=false
+    B:nevermine.RockRider=false
+    B:nevermine.Rosid=false
+    B:nevermine.RunationMaster=false
+    B:nevermine.RuneTemplarBlue=false
+    B:nevermine.RuneTemplarBlueDisabled=false
+    B:nevermine.RuneTemplarGreen=false
+    B:nevermine.RuneTemplarGreenDisabled=false
+    B:nevermine.RuneTemplarRed=false
+    B:nevermine.RuneTemplarRedDisabled=false
+    B:nevermine.RuneTemplarYellow=false
+    B:nevermine.RuneTemplarYellowDisabled=false
+    B:nevermine.RunicGolem=false
+    B:nevermine.RunicGuardian=false
+    B:nevermine.RunicLifeformBlue=false
+    B:nevermine.RunicLifeformGreen=false
+    B:nevermine.RunicLifeformRed=false
+    B:nevermine.RunicLifeformYellow=false
+    B:nevermine.Runicorn=false
+    B:nevermine.RunicornRider=false
+    B:nevermine.Sabretooth=false
+    B:nevermine.SandGolem=false
+    B:nevermine.Sasquatch=false
+    B:nevermine.Scrubby=false
+    B:nevermine.SeaCharger=false
+    B:nevermine.SeaTroll=false
+    B:nevermine.SeaViper=false
+    B:nevermine.Seeker=false
+    B:nevermine.Shaddy=false
+    B:nevermine.Shade=false
+    B:nevermine.Shadow=false
+    B:nevermine.ShadowStalker=false
+    B:nevermine.Shadowlord=false
+    B:nevermine.Shifter=false
+    B:nevermine.Silencer=false
+    B:nevermine.Silverfoot=false
+    B:nevermine.SkeleElder=false
+    B:nevermine.SkeleHopper=false
+    B:nevermine.SkeleHopperElite=false
+    B:nevermine.SkeleHopperStrong=false
+    B:nevermine.Skeleman=false
+    B:nevermine.SkelemanElite=false
+    B:nevermine.SkelemanStrong=false
+    B:nevermine.Skelepig=false
+    B:nevermine.SkelepigElite=false
+    B:nevermine.SkelepigStrong=false
+    B:nevermine.SkeletalCowman=false
+    B:nevermine.Skeletron=false
+    B:nevermine.Skellox=false
+    B:nevermine.Skipper=false
+    B:nevermine.Skolle=false
+    B:nevermine.SkullCreature=false
+    B:nevermine.Slimer=false
+    B:nevermine.Smash=false
+    B:nevermine.Snappy=false
+    B:nevermine.SnowCharger=false
+    B:nevermine.SoulAgent=false
+    B:nevermine.SpearmintSlug=false
+    B:nevermine.SpectralWizard=false
+    B:nevermine.Sphinx=false
+    B:nevermine.Spikeback=false
+    B:nevermine.Spinoledon=false
+    B:nevermine.Spinux=false
+    B:nevermine.SpiritGuardian=false
+    B:nevermine.SpiritProtector=false
+    B:nevermine.Spraggy=false
+    B:nevermine.Squasher=false
+    B:nevermine.Squiggler=false
+    B:nevermine.Stalker=false
+    B:nevermine.StalkerPrime=false
+    B:nevermine.Sticky=false
+    B:nevermine.Stinger=false
+    B:nevermine.Stitches=false
+    B:nevermine.StoreKeeper=false
+    B:nevermine.Sugarface=false
+    B:nevermine.Sunny=false
+    B:nevermine.Surveyor=false
+    B:nevermine.SwampCharger=false
+    B:nevermine.Terradon=false
+    B:nevermine.Terrestrial=false
+    B:nevermine.Tharafly=false
+    B:nevermine.Tipsy=false
+    B:nevermine.Tortione=false
+    B:nevermine.Toxxulous=false
+    B:nevermine.ToyMerchant=false
+    B:nevermine.Tracker=false
+    B:nevermine.Trickster=false
+    B:nevermine.TricksterClone=false
+    B:nevermine.TrollTrader=false
+    B:nevermine.Trotter=false
+    B:nevermine.UndeadTroll=false
+    B:nevermine.Urka=false
+    B:nevermine.Ursa=false
+    B:nevermine.Valkyrie=false
+    B:nevermine.VineWizard=false
+    B:nevermine.Vinocorne=false
+    B:nevermine.Visualent=false
+    B:nevermine.Visular=false
+    B:nevermine.Visulon=false
+    B:nevermine.VitalityMaster=false
+    B:nevermine.VoidCharger=false
+    B:nevermine.VoidWalker=false
+    B:nevermine.Volar=false
+    B:nevermine.Voliant=false
+    B:nevermine.Voltron=false
+    B:nevermine.Voxxulon=false
+    B:nevermine.Waggy=false
+    B:nevermine.Warclops=false
+    B:nevermine.WebReaper=false
+    B:nevermine.Wickett=false
+    B:nevermine.WitherWizard=false
+    B:nevermine.Yeti=false
+    B:nevermine.ZalBanker=false
+    B:nevermine.ZalChild=false
+    B:nevermine.ZalCitizen=false
+    B:nevermine.ZalFoodMarket=false
+    B:nevermine.ZalHerbalist=false
+    B:nevermine.ZalLunarade=false
+    B:nevermine.ZalSpellbinder=false
+    B:nevermine.Zhinx=false
+    B:npcEnderman=false
+    B:npcGolem=false
+    B:npccrystal=false
+    B:npcdwarffemale=false
+    B:npcdwarfmale=false
+    B:npcelffemale=false
+    B:npcelfmale=false
+    B:npcenderchibi=false
+    B:npcfurryfemale=false
+    B:npcfurrymale=false
+    B:npchumanfemale=false
+    B:npchumanmale=false
+    B:npcnagafemale=false
+    B:npcnagamale=false
+    B:npcorcfemale=false
+    B:npcorcfmale=false
+    B:npcpony=false
+    B:npcskeleton=false
+    B:npcvillager=false
+    B:npczombiefemale=false
+    B:npczombiemale=false
     B:witchery.attackbat=false
     B:witchery.babayaga=false
     B:witchery.banshee=false
