--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://www.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Tue May 26 13:40:33 PDT 2015
+#Thu Jun 18 01:11:42 KST 2015
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
