--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created 2015. 6. 16 오후 1:20:32
+; created Jun 18, 2015 1:10:54 AM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
