--- a/config/splash.properties
+++ b/config/splash.properties
@@ -1,5 +1,5 @@
 #Splash screen properties
-#Tue May 26 13:39:51 PDT 2015
+#Thu Jun 18 01:10:58 KST 2015
 logoTexture=textures/gui/title/mojang.png
 background=0xFFFFFF
 font=0x0
